# model-navigator

./: .gitignore  README.md  pyproject.toml
src/model_navigator/: cli.py  dbt_graph.py  lineage.py  tui.py
