[project]
name = "model-navigator"
version = "0.1.0"
description = "Terminal dbt lineage navigator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.0.0",
    "textual>=8.0.0",
]

[project.scripts]
model-navigator = "model_navigator:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
