[project]
name = "model-navigator"
version = "0.1.0"
description = "Terminal dbt lineage navigator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "textual>=3.0",
    "rich>=13.0",
]

[project.scripts]
model-navigator = "model_navigator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_navigator"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["model_navigator"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
]
